# CodeProjects

./: .gitignore  .r.txt.swo  CodeProjects.mk  CodeProjects.project  CodeProjects.workspace  Key.py  Makefile  pwtd.txt  r.txt
.codelite/: CodeProjects.session
CProjects/: .cproject  .project  CMakeLists.txt  c_challenge.c  c_challenge.h  c_challenge_tests.c  frntend.c  student_file.c
CProjects/MultilevelModel/: CMakeLists.txt  out  q  question.cpp
CProjects/MultilevelModel/.kdev4/: MultilevelModel.kdev4
CProjects/MultilevelModel/include/: Distributions.hpp  GnuplotWrapper.hpp  MultilevelModel.hpp  Optimization.hpp  seed_settings.hpp
CProjects/MultilevelModel/src/: Distributions.cpp  MultilevelModel.cpp  Optimization.cpp  Test_Distributions.cpp  Test_MultilevelModel.cpp  Test_Optimization.cpp  seed_settings.cpp  test.cpp
CProjects/RandomProjects/: mit1.c  square_root.c  square_root.h  sroot
CProjects/Simulation/Index/: AnnotationAuthorStorage.iwa  CalculationEngine.iwa  Document.iwa  DocumentStylesheet.iwa  Metadata.iwa  ViewState.iwa
CProjects/Simulation/Index/Tables/: DataList-1.iwa  DataList-10.iwa  DataList-2.iwa  DataList-3.iwa  DataList-4.iwa  DataList-5.iwa  DataList-6.iwa  DataList-7.iwa  DataList-9.iwa  DataList.iwa  HeaderStorageBucket-1.iwa  HeaderStorageBucket.iwa  Tile-1.iwa  Tile.iwa
CProjects/Simulation/Metadata/: DocumentIdentifier  Properties.plist
Latex/: Cover.tex  README.m  ucletterhead.tex
MATLAB/: CallTest  CallTest.m  test.sh  tobedeleted.m
MATLAB/Corr/: GibbsTruncNormBelow.m
MATLAB/Econ220C/: LRGibbs.m  ScreenCast.m  SimpleGibbsLS.m  hw1.m  negLikelihood.m  practice.m
MATLAB/Experiments/: LogitPosteriorPlots.m  probitposterior.m  startup.m  surX.m  test.m  trymex.m
MATLAB/LiuDaniels/: Experimental.m  InverseCommute.m  SigmaMaximize.m  TransformMatrix.m  gibbstests.m  ldscript.m  mvProbit.m  mvprobitDrawBeta.m  updateYstar.m  vech.m
MATLAB/ML/: MVstudenttpdf.m  mvstudenttpdf.m  trtpdf.m
MATLAB/MV_Probit/: BHHH_Tests.m  CentralBhhh.m  GeneralMvProbit.m  LinRegLL.m  RunMvprobit.m  Script_Probit.m  application_script.m  atstartup.m  importspy.m  mvp_CalcMeansVars.m  mvp_ChibGreenbergSampler.m  mvp_LoadFacGstep.m  mvp_LoadFacJstep.m  mvp_LoadFacUpdate.m  mvp_SigmaGstep.m  mvp_WithFactors.m  mvp_betadraw.m  mvp_latentDataDraw.m  mvp_likelihood.m  mvp_pibeta.m  mvp_rwSigmaDraw.m  nextlambda.m  vechIndices.m  zooma.m
MATLAB/MyToolbox/: BHHH_Tests.m  ComputeMeansVars.m  CreateFactorIndexMat.m  DianaYang.m  LLcond_ratio.m  LRGibbs.m  LineSearch.m  LoadingsFactorsUpdateJstep.m  PythonMigration.asv  PythonMigration.m  ToolboxTests.m  VAR_ParameterUpdate.m  bfgs.m  drawSTAlphag.m  factorIndices.m  ghk_integrate.m  import_python_data.m  initCovar.m  interpolateAlpha.m  invGammaMoments.m  logmvnpdf.m  makeStateObsModel.m  piBetaStar.m  qd.m  setObsModel.m  stateSpaceIt.m  vech.m  vechMatrixMaker.m  zooma.m
MATLAB/TruncatedNormal/: GibbsTruncNormBelow.m  leftTruncation.m  shiftedExponentialDist.m  truncNormalRand.m  truncatedAbove.m  truncatedNormalRnd.m  twoSided.m
MATLAB/discrete_choice/: SimStudyZhang.m  SimStudyZhang.m.orig  geweke1991.m  geweke91.m  geweke91T.m  liu2006main.m  liunewtest.m  liutests.m  mhStepMvProbit.m  mv_probit.m  newmethod.m  pathdef.m  proposalStepMvProbit.m  updateLatentZtest.m
MATLAB/factor_models/: Dkowll.m  DmarginalLogLikelihood.m  MultDyFacVar.m  SpatialMakeIdentities.m  Spatial_AmarginalF.m  bhhh.m  computeS123.m  dfgibbs.m  drawSigmaDiag.m  drawStateTransition.m  drawStateVariance.m  dynfacgibbs.m  forwardBackwardSmoother.m  kowComputeP0.m  kowEvalPriorsForObsModel.m  kowLL.m  (+50 more)
MATLAB/factor_models/KOW/mlcode/: CMakeLists.txt
MATLAB/factor_models/KOW/mlcode/include/: Dist.hpp  crb.hpp  read_csv_to_eigen.hpp
MATLAB/factor_models/KOW/mlcode/src/: Dist.cpp  crb.cpp  kowModelSelectMain.cpp  read_csv_to_eigen.cpp
Projects/: .warrant.py.swo  getWebData.py  ib.html  warrant.py
Python/: .~lock.statecovid.csv#  fred.py  fredata.p  latexFormat.py  stock_script.py  text.tex
R/: .~lock.country_names.csv#  hw5solns.R  kowData.R  kow_growth_table.R  pennworldtablesdetail.R  pwtd.txt  statecovid_to_weekly.R  statespacereplicationdata.R
blcr/: cleanup.sh  count  count.c  display.sh  job.sh  readme.txt  test.sh  testmatlabcode  testmatlabcode.m
ccode/: .project  ccode.cbp
vimfiles/: mappings.vim  mycolorscheme.vim  myplugins.vim
watermark/: _autosave-watermark.sch  watermark-cache.lib  watermark.sch  watermark.sch-bak
(+997 files in other folders)
