cmake_minimum_required(VERSION 3.00)
project(frntend)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})
add_executable(frntend frntend.c)
TARGET_LINK_LIBRARIES(frntend ${GTK3_LIBRARIES})
install(TARGETS frntend DESTINATION /home/precision/CodeProjects/CProjects/bin)
