# TOP LEVEL CMAKE
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9 FATAL_ERROR)
PROJECT(kow)

FIND_PACKAGE(Boost  REQUIRED)
SET(CMAKE_CXX_STANDARD 11)
SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
# Set to RELEASE when not Debugging (Debug)
SET(CMAKE_BUILD_TYPE Debug)
SET(EIGEN "/usr/local/include/eigen3")
SET(UNSUPP "/usr/local/include/eigen3/unsupported")
SET(CMAKE_CXX_FLAGS "-O3")

INCLUDE_DIRECTORIES(include  ${BOOST_INCLUDE_DIRS} ${EIGEN} ${UNSUPP})
MESSAGE(STATUS "Boost include  dirs  " ${Boost_INCLUDE_DIRS})
MESSAGE( STATUS "CMAKE_CXX_FLAGS:    " ${CMAKE_CXX_FLAGS} )
MESSAGE(STATUS "Eigen3 dir           " ${EIGEN})
ADD_EXECUTABLE(kow src/kowModelSelectMain.cpp )
